[package]
name = "clustrctrl"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
rand = "0.9.0"
ratatui = "0.29.0"
time = "0.3.41"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-logger = { version = "0.17.0", features = ["crossterm", "tracing", "tracing-subscriber", "tracing-support"] }
